# Rustpaper

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/engine/: Cargo.toml
crates/engine/examples/: probe_gpu.rs  render_composite.rs  render_effect.rs  render_material.rs  render_scene.rs  render_scene_fx.rs
crates/engine/src/: compositor.rs  gpu.rs  lib.rs  main.rs  particle.wgsl  particles.rs  program.rs  shader.wgsl  shader_compile.rs  video.rs  wallpaper.rs
crates/engine/tests/: linked_compile.rs
crates/rustpaper-core/: Cargo.toml
crates/rustpaper-core/examples/: dump_pkg.rs  dump_scene.rs  dump_tex.rs  scan_effects.rs  translate_shader.rs
crates/rustpaper-core/src/: effects.rs  layout.rs  lib.rs  particle.rs  pkg.rs  project.rs  scene.rs  shader.rs  tex.rs
crates/rustpaper-core/tests/: naga_compile.rs
crates/rustpaper-engine/: Cargo.toml
crates/rustpaper-engine/examples/: probe_gpu.rs  render_composite.rs  render_effect.rs  render_material.rs  render_scene.rs  render_scene_fx.rs
crates/rustpaper-engine/src/: compositor.rs  gpu.rs  main.rs  particle.wgsl  particles.rs  postprocess.rs  program.rs  shader_compile.rs  video.rs  wallpaper.rs
crates/rustpaper-engine/tests/: linked_compile.rs
crates/rustpaper-selector/: Cargo.toml  tauri.conf.json
crates/rustpaper-selector/src/: main.rs  settings.rs
crates/rustpaper-selector/ui/: index.html
crates/selector/: .gitignore  Cargo.toml  tauri.conf.json
crates/selector/capabilities/: default.json
crates/selector/src/: main.rs  settings.rs
crates/selector/ui/: index.html
crates/we-core/: Cargo.toml
crates/we-core/examples/: dump_pkg.rs  dump_scene.rs  dump_tex.rs  scan_effects.rs  translate_shader.rs
crates/we-core/src/: effects.rs  layout.rs  lib.rs  particle.rs  project.rs  scene.rs  shader.rs  tex.rs
crates/we-core/tests/: naga_compile.rs
docker/ci/: Dockerfile
docs/: SHADER_TRANSLATION.md
examples/: dump_pkg.rs  dump_scene.rs
src/: app.rs  gpu.rs  main.rs  pkg.rs  scene.rs  shader.wgsl  video.rs  wallpaper.rs
