[package]
name = "wallpaper-engine-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
lz4_flex = "0.13.1"
pollster = "0.4.0"
raw-window-handle = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
smithay-client-toolkit = "0.19"
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-client = "0.31"
wgpu = "29.0.3"
