# Workspace raiz. Os sub-projetos ("crates") ficam em crates/*.
#   we-core : lógica dos formatos do Wallpaper Engine (compartilhada)
#   engine  : o renderer (usa we-core), binário do wallpaper
# (futuro) selector : app desktop pra escolher wallpaper (usará we-core)
[workspace]
resolver = "3"
members = ["crates/we-core", "crates/engine", "crates/selector"]
