# Workspace raiz do Rustpaper. Os sub-projetos ("crates") ficam em crates/*.
#   rustpaper-core     : lógica dos formatos do Wallpaper Engine (compartilhada)
#   rustpaper-engine   : o renderer (usa rustpaper-core), binário `rustpaper`
#   rustpaper-selector : app desktop pra escolher wallpaper (usa rustpaper-core)
[workspace]
resolver = "3"
members = ["crates/rustpaper-core", "crates/rustpaper-engine", "crates/rustpaper-selector"]
