[package]
name = "engine"
version = "0.1.0"
edition = "2024"

# Binário nomeado wallpaper-engine-rs (mantém o caminho de execução conhecido:
# target/debug/wallpaper-engine-rs).
[[bin]]
name = "wallpaper-engine-rs"
path = "src/main.rs"

[dependencies]
we-core = { path = "../we-core" }
wgpu = "29.0.3"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
raw-window-handle = "0.6"
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
wayland-backend = { version = "0.3", features = ["client_system"] }
