[package]
name = "rustpaper-core"
version = "0.1.0"
edition = "2024"

# Lógica dos formatos do Wallpaper Engine (project.json, .pkg, .tex, scene.json).
# Sem dependências gráficas — é lib pura, compartilhada pelo rustpaper-engine e rustpaper-selector.
[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
lz4_flex = "0.13.1"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
texpresso = "2.0.2"

# Só pra TESTES: valida que o GLSL que produzimos compila no mesmo frontend
# (naga) que o wgpu usa. Versão casada com o wgpu 29 do engine.
[dev-dependencies]
naga = { version = "29.0.3", features = ["glsl-in", "spv-in", "wgsl-out"] }
