[package]
name = "rustpaper-selector"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustpaper-selector"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Compartilha a lógica de formatos do WE com o engine.
rustpaper-core = { path = "../rustpaper-core" }
