[package]
name = "selector"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wallpaper-selector"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Compartilha a lógica de formatos do WE com o engine.
we-core = { path = "../we-core" }
