[package]
name = "we-core"
version = "0.1.0"
edition = "2024"

# Lógica dos formatos do Wallpaper Engine (project.json, .pkg, .tex, scene.json).
# Sem dependências gráficas — é lib pura, compartilhada por engine e selector.
[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
lz4_flex = "0.13.1"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
